# itmo-cuda-cource-2025

works/apvyugina/lab2/: Makefile
works/apvyugina/lab2/include/: kernel_launcher.h  multiplication.h  utils.h
works/apvyugina/lab2/src/: cpu_multiplication.cpp  gpu_multiplication.cu  main.cpp
works/apvyugina/lab4/: README.md
works/apvyugina/lab4/include/: radix_sort.h
works/apvyugina/lab4/src/: main.cu  radix_sort.cu
works/apvyugina/lab5/: CMakeLists.txt  Makefile  README.md
works/apvyugina/lab5/include/: Calibrator.h  DetectionModelTRT.h  Utils.h
works/apvyugina/lab5/src/: DetectionModelTRT.cpp  Utility.cpp  main.cpp
